# Troubleshooting-Wizard

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  build.ps1  pyproject.toml  pytest.ini  requirements.txt  run.py
.github/: AGENT.md  CONTRIBUTING.md  GIT_WORKFLOW.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  general_issue.yml
.github/workflows/: ci.yml  code-quality.yml  release.yml
data/: example_data.json
docs/: CHANGELOG.md  CI_CD_PROTECTION.md  CONTRIBUTING.md  GIT_WORKFLOW.md
media/: README.md
scripts/: format_code.py  release_manager.py  setup_automation.py  setup_branch_protection.py  setup_ci_cd_protection.py  setup_environment.py  test_workflow.py
src/: cache_manager.py  data.json  database_manager.py  example_data.json  health_check.py  logging_config.py  main.py  pdf_viewer.py  process_pdf.py  search_optimizer.py  troubleshootingScript.py  ui_components.py
tests/: __init__.py  conftest.py  test_core.py  test_database_manager.py  test_main.py  test_ui_components.py
tests/integration/: __init__.py  test_application_flow.py
tools/: build.ps1  format_code.py  release_manager.py  setup_automation.py  test_workflow.py  workflow_tester.py
