[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "troubleshooting-wizard"
version = "1.2.0"
description = "Industrial equipment troubleshooting and error code management tool"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Troubleshooting Wizard Team"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
requires-python = ">=3.7"
dependencies = [
    "pillow>=9.0.0",
    "pyautogui>=0.9.54",
    "PyMuPDF>=1.18.0",
    "pyinstaller>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.3.0",
    "flake8>=6.0.0",
    "pre-commit>=3.0.0",
    "pylint>=2.6.0",
]

[tool.black]
line-length = 100
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 100
ignore = ["E203", "W503", "E501"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
]