[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "troubleshooting-wizard"
version = "1.2.0"
description = "Industrial equipment troubleshooting and error code management tool"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Troubleshooting Wizard Team"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
requires-python = ">=3.7"
dependencies = [
    "pillow>=9.0.0",
    "pyautogui>=0.9.54",
    "PyMuPDF>=1.18.0",
    "pyinstaller>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0,<24.0.0",
    "flake8>=4.0.0,<6.0.0",
    "isort>=5.10.0,<6.0.0",
    "pre-commit>=2.20.0,<3.0.0",
    "pylint>=2.6.0,<3.0.0",
    "pytest>=6.0.0,<8.0.0",
    "pytest-cov>=3.0.0,<5.0.0",
    "pytest-mock>=3.6.0,<4.0.0",
    "pytest-xdist>=2.5.0,<4.0.0",
    "PySide6>=6.5.0",
]

[tool.black]
line-length = 100
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 100
ignore = ["E203", "W503", "E501", "E231", "E241", "E202"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
    "tests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing --cov-report=xml:coverage.xml"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]
